[gd_scene load_steps=7 format=2]

[ext_resource path="res://Combat/Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Combat/Box/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Weapons/Shuriken.png" type="Texture" id=3]
[ext_resource path="res://Combat/Bullet.gd" type="Script" id=4]
[ext_resource path="res://Combat/WallHit.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Shuriken" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Floor" parent="." instance=ExtResource( 1 )]

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 32
collision_mask = 20

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="WallHit" parent="." instance=ExtResource( 5 )]
[connection signal="body_entered" from="Floor" to="." method="_on_Floor_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hitbox"]
